--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,10 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  color: #2E2E33;
+  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+  line-height: 1.3em;
+  font-weight: 300;
+  font-style: normal;
 }
