--- a/client/src/pages/Login/Login.css
+++ b/client/src/pages/Login/Login.css
@@ -1,3 +1,39 @@
-p {
-    margin-top: 16px;
+#loginP {
+    margin-top: 20px;
+    font-size: 14px;
 }
+#loginCardContainer{
+    font-family: "Playfair Display", serif;
+    font-size: 18px;
+    letter-spacing: 0;
+    line-height: 1.1em;
+    font-weight: 900;
+    border-color: #b4efff;
+}
+#loginHeader{
+    font-size: 24px;
+    font-weight: bold;
+}
+button {
+    background-color: #04cbff;
+    color: white;
+}
+
+
+h4 {
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    /* border-right: .10em solid #b4efff; The typwriter cursor */
+    white-space: nowrap; /* Keeps the content on a single line */
+    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+    letter-spacing: 0; /* Adjust as needed */
+    animation: 
+      typing 2.5s steps(20, end),
+      blinking-cursor .5s step-end infinite;
+  }
+  
+  /* The typing effect */
+  @keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+  }
+  
