updated home and about pages

--- a/client/src/pages/About/About.css
+++ b/client/src/pages/About/About.css
@@ -22,3 +22,31 @@ h1{
     transform: scale(1.3);
 }
 
+#aboutImg {
+    transition: transform 300ms;
+}
+  
+#aboutImg:hover {
+    transform: scale(1.3);
+}
+
+#aboutP {
+   
+    font-family: "Playfair Display", serif;
+    font-size: 24px;
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    /* border-right: .10em solid #b4efff; The typwriter cursor */
+    white-space: nowrap; /* Keeps the content on a single line */
+    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+    letter-spacing: 0; /* Adjust as needed */
+    animation: 
+      typing 2.5s steps(20, end),
+      blinking-cursor .5s step-end infinite;
+  }
+  
+  /* The typing effect */
+  @keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+  }
+  
