added delete button

--- a/client/src/pages/Contact/Contact.css
+++ b/client/src/pages/Contact/Contact.css
@@ -5,9 +5,9 @@
     line-height: 1.1em;
     font-weight: 900;
     border-color: #b4efff;
+    margin-bottom: 30px;
 }
 #contactHeader{
-    font-size: 24px;
     font-weight: bold;
 }
 button {
