--- a/client/src/pages/AddNew/AddNew.css
+++ b/client/src/pages/AddNew/AddNew.css
@@ -1,7 +1,35 @@
-#cardContainer{
+#addNewCardContainer{
+    font-family: "Playfair Display", serif;
+    font-size: 18px;
+    letter-spacing: 0;
+    line-height: 1.1em;
+    font-weight: 900;
+    border-color: #b4efff;
     margin-top: 30px;
     margin-bottom: 35px;
 }
 #addNewBtn{
 margin-bottom: 20px;
+background-color: #04cbff;
+color: white;
 }
+#addNewHeader{
+    font-size: 24px;
+    font-weight: bold;
+}
+h4 {
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    /* border-right: .10em solid #b4efff; The typwriter cursor */
+    white-space: nowrap; /* Keeps the content on a single line */
+    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+    letter-spacing: 0; /* Adjust as needed */
+    animation: 
+      typing 2.5s steps(20, end),
+      blinking-cursor .5s step-end infinite;
+  }
+  
+  /* The typing effect */
+  @keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+  }
