--- a/client/src/pages/Login/Login.css
+++ b/client/src/pages/Login/Login.css
@@ -9,6 +9,7 @@
     line-height: 1.1em;
     font-weight: 900;
     border-color: #b4efff;
+    margin-bottom: 30px;
 }
 #loginHeader{
     font-size: 24px;
@@ -18,7 +19,6 @@ button {
     background-color: #04cbff;
     color: white;
 }
-
 
 h4 {
     overflow: hidden; /* Ensures the content is not revealed until the animation */
