--- a/client/src/pages/Login/Login.css
+++ b/client/src/pages/Login/Login.css
@@ -20,20 +20,20 @@ button {
     color: white;
 }
 
-h4 {
+/* h4 {
     overflow: hidden; /* Ensures the content is not revealed until the animation */
     /* border-right: .10em solid #b4efff; The typwriter cursor */
-    white-space: nowrap; /* Keeps the content on a single line */
-    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-    letter-spacing: 0; /* Adjust as needed */
-    animation: 
+    /* white-space: nowrap;  */
+    /* margin: 0 auto;  */
+    /* letter-spacing: 0; */
+    /* animation: 
       typing 2.5s steps(20, end),
       blinking-cursor .5s step-end infinite;
-  }
+  } */
   
   /* The typing effect */
-  @keyframes typing {
+  /* @keyframes typing {
     from { width: 0 }
     to { width: 100% }
-  }
+  }  */
   
