--- a/client/src/pages/About/About.css
+++ b/client/src/pages/About/About.css
@@ -1,6 +1,6 @@
 h1{
-    font-family: "Playfair Display", serif;
-    font-size: 54px;
+    font-family: sans-serif;
+    font-size: 42px;
     letter-spacing: 0;
     line-height: 1.1em;
     font-weight: 900;
@@ -32,7 +32,7 @@ h1{
 
 #aboutP {
    
-    font-family: "Playfair Display", serif;
+    font-family: serif;
     font-size: 24px;
     overflow: hidden; /* Ensures the content is not revealed until the animation */
     /* border-right: .10em solid #b4efff; The typwriter cursor */
