--- a/client/src/pages/AddNew/AddNew.css
+++ b/client/src/pages/AddNew/AddNew.css
@@ -1,9 +1,9 @@
 #addNewCardContainer{
-    font-family: "Playfair Display", serif;
+    font-family: sans-serif;
     font-size: 18px;
     letter-spacing: 0;
     line-height: 1.1em;
-    font-weight: 900;
+    /* font-weight: 900; */
     border-color: #b4efff;
     margin-top: 30px;
     margin-bottom: 35px;
@@ -15,9 +15,9 @@ color: white;
 }
 #addNewHeader{
     font-size: 24px;
-    font-weight: bold;
+    font-weight: normal;
 }
-h4 {
+#addNewHeader {
     overflow: hidden; /* Ensures the content is not revealed until the animation */
     /* border-right: .10em solid #b4efff; The typwriter cursor */
     white-space: nowrap; /* Keeps the content on a single line */
