--- a/client/src/pages/Login/Login.css
+++ b/client/src/pages/Login/Login.css
@@ -3,37 +3,19 @@
     font-size: 14px;
 }
 #loginCardContainer{
-    font-family: "Playfair Display", serif;
+    font-family: sans-serif;
     font-size: 18px;
     letter-spacing: 0;
     line-height: 1.1em;
-    font-weight: 900;
+    /* font-weight: 900; */
     border-color: #b4efff;
     margin-bottom: 30px;
 }
 #loginHeader{
     font-size: 24px;
-    font-weight: bold;
+    font-weight: normal;
 }
 button {
     background-color: #04cbff;
     color: white;
 }
-
-/* h4 {
-    overflow: hidden; /* Ensures the content is not revealed until the animation */
-    /* border-right: .10em solid #b4efff; The typwriter cursor */
-    /* white-space: nowrap;  */
-    /* margin: 0 auto;  */
-    /* letter-spacing: 0; */
-    /* animation: 
-      typing 2.5s steps(20, end),
-      blinking-cursor .5s step-end infinite;
-  } */
-  
-  /* The typing effect */
-  /* @keyframes typing {
-    from { width: 0 }
-    to { width: 100% }
-  }  */
-  
