--- a/client/src/pages/Plans/Plans.css
+++ b/client/src/pages/Plans/Plans.css
@@ -1,21 +1,21 @@
 #plansCardContainer{
-    font-family: "Playfair Display", serif;
+    font-family: sans-serif;
     font-size: 18px;
     letter-spacing: 0;
     line-height: 1.1em;
-    font-weight: 900;
+    /* font-weight: 900; */
     border-color: #b4efff;
     margin-bottom: 30px;
 }
 #plansHeader{
     font-size: 24px;
-    font-weight: bold;
+    font-weight: normal;
 }
 #plansBtn {
     background-color: #04cbff;
     color: white;
 }
-h4 {
+#plansHeader {
     overflow: hidden; /* Ensures the content is not revealed until the animation */
     /* border-right: .10em solid #b4efff; The typwriter cursor */
     white-space: nowrap; /* Keeps the content on a single line */
