--- a/client/src/pages/Signup/Signup.css
+++ b/client/src/pages/Signup/Signup.css
@@ -1,16 +1,16 @@
 
 #signupCardContainer{
-    font-family: "Playfair Display", serif;
+    font-family: sans-serif;
     font-size: 18px;
     letter-spacing: 0;
     line-height: 1.1em;
-    font-weight: 900;
+    /* font-weight: 900; */
     border-color: #b4efff;
     margin-bottom: 30px;
 }
 #signupHeader{
     font-size: 24px;
-    font-weight: bold;
+    font-weight: normal;
 }
 button {
     background-color: #04cbff;
